--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -82,5 +82,5 @@ jobs:
           path: vendor
           key: ${{ runner.os }}-vendor-${{ hashFiles('composer.lock') }}
 
-      - name: Run stat alanyse
+      - name: Run stat analyse
         run: vendor/bin/phpstan analyse app/ --level=5
