--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -69,18 +69,18 @@ jobs:
       - name: Run test
         run: php artisan test
 
-  analyse:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # analyse:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Restore vendor
-        uses: actions/checkout@v4
-        with:
-          path: vendor
-          key: ${{ runner.os }}-vendor-${{ hashFiles('composer.lock') }}
+  #     - name: Restore vendor
+  #       uses: actions/checkout@v4
+  #       with:
+  #         path: vendor
+  #         key: ${{ runner.os }}-vendor-${{ hashFiles('composer.lock') }}
 
-      - name: Run stat analyse
-        run: vendor/bin/phpstan analyse app/ --level=5
+  #     - name: Run stat analyse
+  #       run: vendor/bin/phpstan analyse app/ --level=5
