--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -53,21 +53,21 @@ jobs:
       - name: Run lint
         run: vendor/bin/phpcs
 
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # test:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Restore vendor
-        uses: actions/cache@v4
-        with:
-          path: vendor
-          key: ${{ runner.os }}-vendor-${{ hashFiles('composer.lock') }}
+  #     - name: Restore vendor
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: vendor
+  #         key: ${{ runner.os }}-vendor-${{ hashFiles('composer.lock') }}
 
-      - name: Run test
-        run: php artisan test
+  #     - name: Run test
+  #       run: php artisan test
 
   # analyse:
   #   needs: build
